--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "gh-pages -d build -t"
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-static": "^3.0.5",
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
@@ -19,6 +21,7 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
+		"gh-pages": "^6.3.0",
 		"leva": "^0.9.35",
 		"three": "^0.172.0"
 	}
